--- a/src/main/resources/templates/student/SelectionScore.html
+++ b/src/main/resources/templates/student/SelectionScore.html
@@ -10,7 +10,11 @@
     <script src="/jquery-3.4.1.js"></script>
 </head>
 <body>
-
+<div class="page">
+    <div class="little-header">
+        <blockquote class="layui-elem-quote">历次选拔考试成绩</blockquote>
+    </div>
+</div>
 <table class="layui-table" id="demo" lay-filter="test"></table>
 
 
