--- a/src/main/resources/templates/student/ChangeImformation.html
+++ b/src/main/resources/templates/student/ChangeImformation.html
@@ -8,7 +8,11 @@
     <script src="/jquery-3.4.1.js"></script>
 </head>
 <body class="layui-layout-body">
-
+<div class="page">
+    <div class="little-header">
+        <blockquote class="layui-elem-quote">修改个人信息</blockquote>
+    </div>
+</div>
 <div style="padding: 20px; background-color: #F2F2F2;">
     <form class="layui-form layui-form-pane" id="Demo">
     <div class="layui-row layui-col-space15" >
@@ -18,29 +22,32 @@
 
                     <div class="layui-form-item">
                         <label class="layui-form-label">手机号码</label>
-                        <div class="layui-input-block" style="width: 120px">
+                        <div class="layui-input-inline" style="width: 120px">
                             <input type="text" name="phoneNo"id="phoneNo" placeholder="请输入" autocomplete="off"
                                    class="layui-input"lay-verify="phone">
                         </div>
+                        <div class="layui-form-mid layui-word-aux">请输入11位手机号</div>
                     </div>
 
 
                     <div class="layui-form-item" >
                         <label class="layui-form-label">专业</label>
-                        <div class="layui-input-block" style="width: 120px">
+                        <div class="layui-input-inline" style="width: 120px">
                             <input type="text" name="profession"id="profession" placeholder="请输入" autocomplete="off"
                                    class="layui-input" lay-verify="required">
                         </div>
+                        <div class="layui-form-mid layui-word-aux">请输入专业名称</div>
                     </div>
 
 
 
                     <div class="layui-form-item">
                         <label class="layui-form-label">班级</label>
-                        <div class="layui-input-block" style="width: 120px">
+                        <div class="layui-input-inline" style="width: 120px">
                             <input type="text" name="classNo" id="classNo" placeholder="请输入" autocomplete="off"
                                    class="layui-input"lay-verify="required">
                         </div>
+                        <div class="layui-form-mid layui-word-aux">请输入班级号</div>
                     </div>
 
                     <div class="layui-form-item" style="margin: 0px 0px 0px 100px;">
