--- a/src/main/resources/templates/student/SeeApplication.html
+++ b/src/main/resources/templates/student/SeeApplication.html
@@ -10,9 +10,12 @@
     <script src="/jquery-3.4.1.js"></script>
 </head>
 <body>
-
+<div class="page">
+    <div class="little-header">
+        <blockquote class="layui-elem-quote">选拔考试申请记录</blockquote>
+    </div>
+</div>
 <table class="layui-table" id="demo" lay-filter="test"></table>
-
 
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">取消</a>
