添加了协会端上方横条

--- a/src/main/resources/templates/association_change_filter.html
+++ b/src/main/resources/templates/association_change_filter.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+    <div class="little-header layui-layer-padding">
+        <blockquote class="layui-elem-quote">更改筛选条件</blockquote>
+    </div>
     <div class="layui-row" >
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
