--- a/src/main/resources/templates/association_import_scores.html
+++ b/src/main/resources/templates/association_import_scores.html
@@ -9,7 +9,9 @@
     <script src="/jquery-3.4.1.js"></script>
 </head>
 <body>
-
+    <div class="little-header">
+        <blockquote class="layui-elem-quote">导入选拔赛成绩</blockquote>
+    </div>
     <div class="layui-row" >
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
