--- a/src/main/resources/templates/teacher/ccfEvent.html
+++ b/src/main/resources/templates/teacher/ccfEvent.html
@@ -232,7 +232,7 @@
 
 <div class="page">
     <div class="little-header">
-        <blockquote class="layui-elem-quote">CCF Event</blockquote>
+        <blockquote class="layui-elem-quote">CCF考试信息</blockquote>
     </div>
 
     <table class="layui-table" id="demo" lay-filter="test"></table>
