--- a/src/main/resources/templates/teacher/scoreAnalysis.html
+++ b/src/main/resources/templates/teacher/scoreAnalysis.html
@@ -42,7 +42,7 @@
     <div class="layui-row">
     <div class="layui-col-xs12">
         <div class="layui-col-xs4">
-            <div style="border: solid 1px black;color: #00F7DE" >
+            <div  >
                 <form class="layui-form" id="dataUpload">
                     <div class="layui-form-item">
                         <label class="layui-form-label" style="width: auto">考试批次</label>
