--- a/src/main/resources/templates/teacher/scoreCheck.html
+++ b/src/main/resources/templates/teacher/scoreCheck.html
@@ -35,7 +35,7 @@
 <body>
 <div class="page">
     <div class="little-header">
-        <blockquote class="layui-elem-quote">Student Event</blockquote>
+        <blockquote class="layui-elem-quote">外校成绩</blockquote>
     </div>
 
     <table class="layui-table" id="demo" lay-filter="test"></table>
