--- a/src/main/resources/templates/teacher/studentEvent.html
+++ b/src/main/resources/templates/teacher/studentEvent.html
@@ -35,7 +35,7 @@
 <body>
 <div class="page">
     <div class="little-header">
-        <blockquote class="layui-elem-quote">Student Event</blockquote>
+        <blockquote class="layui-elem-quote">学生信息</blockquote>
     </div>
 
     <table class="layui-table" id="demo" lay-filter="test"></table>
