--- a/src/main/resources/templates/student/SubApplication.html
+++ b/src/main/resources/templates/student/SubApplication.html
@@ -13,7 +13,7 @@
         <blockquote class="layui-elem-quote">提交申请</blockquote>
     </div>
 </div>
-<div style="padding: 20px; background-color: #F2F2F2;">
+<div style="padding:180px  20px; background-color: #F2F2F2;">
     <form class="layui-form layui-form-pane"  id="eidForm">
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md6 layui-col-md-offset3" >
@@ -21,7 +21,7 @@
                     <div class="layui-card-body">
                         <div class="layui-form-item" >
                             <label class="layui-form-label">申请批次</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 200px;">
                                 <input type="text" name="eid" id="eid" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="required">
                             </div>
