--- a/src/main/resources/templates/student/ChangeImformation.html
+++ b/src/main/resources/templates/student/ChangeImformation.html
@@ -13,7 +13,7 @@
         <blockquote class="layui-elem-quote">修改个人信息</blockquote>
     </div>
 </div>
-<div style="padding: 20px; background-color: #F2F2F2;">
+<div style="padding:150px 20px 150px 20px; background-color: #F2F2F2;">
     <form class="layui-form layui-form-pane" id="Demo">
     <div class="layui-row layui-col-space15" >
         <div class="layui-col-md6 layui-col-md-offset3" >
@@ -22,7 +22,7 @@
 
                     <div class="layui-form-item">
                         <label class="layui-form-label">手机号码</label>
-                        <div class="layui-input-inline" style="width: 120px">
+                        <div class="layui-input-inline" style="width: 190px">
                             <input type="text" name="phoneNo"id="phoneNo" placeholder="请输入" autocomplete="off"
                                    class="layui-input"lay-verify="phone">
                         </div>
@@ -32,7 +32,7 @@
 
                     <div class="layui-form-item" >
                         <label class="layui-form-label">专业</label>
-                        <div class="layui-input-inline" style="width: 120px">
+                        <div class="layui-input-inline" style="width: 190px">
                             <input type="text" name="profession"id="profession" placeholder="请输入" autocomplete="off"
                                    class="layui-input" lay-verify="required">
                         </div>
@@ -43,7 +43,7 @@
 
                     <div class="layui-form-item">
                         <label class="layui-form-label">班级</label>
-                        <div class="layui-input-inline" style="width: 120px">
+                        <div class="layui-input-inline" style="width: 190px">
                             <input type="text" name="classNo" id="classNo" placeholder="请输入" autocomplete="off"
                                    class="layui-input"lay-verify="required">
                         </div>
