modify a filed name of CCFscore modify a id of SeeInformation

--- a/src/main/resources/templates/student/CCFscore.html
+++ b/src/main/resources/templates/student/CCFscore.html
@@ -108,7 +108,7 @@
                         sort: true
                     },
                     {
-                        field: 'isOnHold',
+                        field: 'isApproved',
                         title: '状态',
                     },{fixed: 'right', width: 150, align: 'center', toolbar: '#barDemo'}
                 ]
