--- a/src/main/resources/templates/student/SeeImformation.html
+++ b/src/main/resources/templates/student/SeeImformation.html
@@ -35,7 +35,7 @@
                         <div class="layui-form-item" >
                             <label class="layui-form-label">学号</label>
                             <div class="layui-input-block" style="width: 350px;margin-bottom: 3px">
-                                <input type="text" readonly  unselectable="on"name="studentID" id="studentID" placeholder="" autocomplete="off"
+                                <input type="text" readonly  unselectable="on"name="studentID" id="studentId" placeholder="" autocomplete="off"
                                        class="layui-input"lay-verify="number1">
                             </div>
                         </div>
