修复了一些bug

--- a/src/main/resources/templates/teacher/changePassword.html
+++ b/src/main/resources/templates/teacher/changePassword.html
@@ -14,7 +14,11 @@
     <div style="padding: 15px;">
         <b id="passModifyMess" style="color: red;"></b>
         <form class="layui-form" id="changepwd">
-
+            <div style="padding: 20px; background-color: #F2F2F2;">
+                    <div class="layui-row layui-col-space15">
+                        <div class="layui-col-md6 layui-col-md-offset3 layui-col-md-offset3" >
+                            <div class="layui-card" >
+                                <div class="layui-card-body">
             <div class="layui-form-item">
                 <label class="layui-form-label">旧密码</label>
                 <div class="layui-input-inline">
@@ -44,6 +48,12 @@
                     <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
                     <button type="reset" class="layui-btn layui-btn-primary" id="reset">重置</button>
                 </div>
+            </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </form>
     </div>
