--- a/src/main/resources/templates/teacher/changePassword.html
+++ b/src/main/resources/templates/teacher/changePassword.html
@@ -6,57 +6,68 @@
     <title>修改密码</title>
     <link rel="stylesheet" href="/css/layui.css">
     <script src="/layui.js"></script>
+    <link rel="stylesheet" href="/css/admin.css">
 </head>
 <body>
+<style>
+    html {
+        height: 100%;
+        width: 100%;
+    }
 
-<div class="layui-row">
-    <!-- 内容主体区域 -->
-    <div style="padding: 15px;">
-        <b id="passModifyMess" style="color: red;"></b>
-        <form class="layui-form" id="changepwd">
-            <div style="padding: 20px; background-color: #F2F2F2;">
-                    <div class="layui-row layui-col-space15">
-                        <div class="layui-col-md6 layui-col-md-offset3 layui-col-md-offset3" >
-                            <div class="layui-card" >
-                                <div class="layui-card-body">
-            <div class="layui-form-item">
-                <label class="layui-form-label">旧密码</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="oldPassword" required lay-verify="required" autocomplete="off"
-                           class="layui-input">
-                </div>
-            </div>
+    body {
+        height: 100%;
+        width: 100%;
+    }
 
-            <div class="layui-form-item">
-                <label class="layui-form-label">新密码</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="password" required lay-verify="check" autocomplete="off"
-                           class="layui-input">
-                </div>
-            </div>
 
-            <div class="layui-form-item">
-                <label class="layui-form-label">确认新密码</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="confirm_password" required lay-verify="required" autocomplete="off"
-                           class="layui-input">
-                </div>
-            </div>
+</style>
+<div class="page">
 
-            <div class="layui-form-item">
-                <div class="layui-input-block">
-                    <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
-                    <button type="reset" class="layui-btn layui-btn-primary" id="reset">重置</button>
-                </div>
-            </div>
-
-                                </div>
-                            </div>
-                        </div>
+    <div class="layui-card" style="box-shadow: 0 3px 18px rgba(100, 0, 0, .5); text-align: center; width: 400px;">
+        <div class="layui-card-header">修改密码</div>
+        <div class="layui-card-body">
+            <form id="changepwd">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">旧密码</label>
+                    <div class="layui-input-inline">
+                        <input type="password" name="oldPassword" required lay-verify="required"
+                               autocomplete="off"
+                               class="layui-input">
                     </div>
-            </div>
-        </form>
+                </div>
+
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">新密码</label>
+                    <div class="layui-input-inline">
+                        <input type="password" name="password" required lay-verify="check"
+                               autocomplete="off"
+                               class="layui-input">
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">确认新密码</label>
+                    <div class="layui-input-inline">
+                        <input type="password" name="confirm_password" required lay-verify="required"
+                               autocomplete="off"
+                               class="layui-input">
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
+                        <button type="reset" class="layui-btn layui-btn-primary" id="reset">重置</button>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
     </div>
+
 </div>
 
 <script>
@@ -64,21 +75,21 @@
 
     layui.use('form', function () {
         var form = layui.form;
-        var $=layui.jquery;
+        var $ = layui.jquery;
         form.on('submit(formDemo)', function (data) {
 
-            var confirm_password=$("[name=confirm_password]").val();
-            var new_password=$("[name=password]").val();
-            if(confirm_password == new_password){
+            var confirm_password = $("[name=confirm_password]").val();
+            var new_password = $("[name=password]").val();
+            if (confirm_password == new_password) {
                 $.post("/api/json/change_password", $("#changepwd").serialize()
                     , function (res) {
-                    if(res.code==200){
-                        layer.msg("修改密码成功");
-                    }else {
-                        layer.msg(res.message);
-                    }
-                });
-            }else{
+                        if (res.code == 200) {
+                            layer.msg("修改密码成功");
+                        } else {
+                            layer.msg(res.message);
+                        }
+                    });
+            } else {
                 layer.msg('两次密码不一致', {
                     icon: 2,
                     anim: 6
