--- a/src/main/resources/templates/teacher/scoreImport.html
+++ b/src/main/resources/templates/teacher/scoreImport.html
@@ -30,6 +30,7 @@
         <button type="button" class="layui-btn" id="test1">
             <i class="layui-icon">&#xe67c;</i>上传名单
         </button>
+        <a href="/download/scoreImport.xls" download="成绩导入模板.xls" class="layui-btn">下载模版</a>
     </div>
 
 
